# nova-galaxy

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-test.yml  nova-galaxy.yml
dockerfiles/: Dockerfile
docs/core_concepts/: data_stores.rst  datasets.rst  interactive_tools.rst  parameters.rst  tools.rst  workflows.rst
docs/examples/: basic_usage.rst  dataset_collections.rst  interactive_tool_usage.rst
src/nova/galaxy/: __init__.py  dataset.py  job.py  workflow.py
tests/: test_data_store.py  test_dataset.py  test_run_tool.py  test_tool_runner.py  test_workflow.py
